v3.9.11 (XXXX-X-XX)
--------------------

* BTS-1261 For some named graphs in cluster, when creating a debugDump for a
  traversal query that would use the graph's name, the graph wouldn't be able to
  be recreated because the info gathered in the process of creating a debugDump
  was broken. It uses the result form an aql explain to get the graph info and
  use in the debugDump, but this wouldn't be available because, instead of
  having the name of the graph as key in the graph object of the explain, there
  would be an array with edge collection names. It was changed for the case when
  there's a named graph, but maintained when there's no access to the graph's
  name.

* Fix issue #18982: query editor null/undefined check filters out bindParams
  with value 0.

* Support parsing HTTP GET requests with velocypack Content-Type without a
  request body. Previously parsing such requests led to an error on the server
  side.

* ES-1566: fix an issue when trying to restrict traversals to non-existing
  collections with the `edgeCollections` traversal option.
  
  If a non-existing collection is specified in the `edgeCollections` or
  `vertexCollections` options of an AQL traversal, the query will now fail with
  a `collection or view not found` error. Also, if wrong collection types are
  used (e.g. a document collection or a view for `edgeCollections`), then an
  error is raised about an invalid collection type being used.

  This is a behavior change compared to previous versions, which ignored
  specifying non-existing vertex collections and had undefined behavior when
  specifying non-existing edge collections or using a vertex collection instead
  of an edge collection.

* Reduce memory usage for incremental sync replication.

  The incremental sync protocol that was used for collections created with 3.8
  or higher had memory usage issues in case the follower already had some local
  data and its dataset was much larger than the leader's. For example, this can